layout bugfix and update changelog for merge

--- a/attack-theme/static/style/_layouts.scss
+++ b/attack-theme/static/style/_layouts.scss
@@ -588,12 +588,6 @@ pre {
         flex-grow: 1;
         @include font("Roboto-Regular");
     }
-
-    .card:nth-child(5) {
-        a img {
-            margin-bottom: to-rem(15);
-        }
-    }
 }
 /******/
 
